<resources>
    <string name="app_name">华林车务</string>
    <!--base-->
    <string name="base_loading">Loading&#8230;</string>
    <string name="base_no_more">-End-</string>
    <string name="base_toast_session_expire">Session expiration</string>


    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_login">登录</string>

    <string name="forget_pwd_forget">忘记密码？</string>
    <string name="forget_pwd_notify">请输入您的电话查找您的账号</string>
    <string name="forget_pwd_next">下一步</string>
    <string name="forget_pwd_id_code">验证码</string>
</resources>
