<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    tools:context="com.weimu.chewu.module.login.ForgetPwdTip1Activity">

    <include layout="@layout/toolbar_primary"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginTop="50dp"
        android:text="@string/forget_pwd_forget"
        android:textColor="@color/color_888"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginTop="10dp"
        android:text="@string/forget_pwd_notify"
        android:textColor="@color/color_888"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_normal_shape">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/login_phone" />

        <EditText
            android:id="@+id/forget_pwd_et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="26dp"
            android:background="@color/colorTransparent"
            android:gravity="center_vertical"
            android:hint="@string/login_phone_hint"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/forget_pwd_btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginTop="26dp"
        android:background="@drawable/btn_default_shape"
        android:text="@string/forget_pwd_next"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>
